<resources>
    <string name="app_name">Recipes</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="password_is_updated">Password is updated</string>
    <string name="password_is_not_updated">Password is not updated</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="recipes">Recipes</string>
    <string name="favorite_recipes">Favorite recipes</string>
    <string name="name_of_recipe">Name of recipe</string>
    <string name="type_your_query">Type your query for searching</string>
    <string name="error_message">Error message</string>
    <string name="no_internet_connection_message">You need internet connection to load.</string>
    <string name="name_recipe">Name recipe</string>
    <string name="ingredients">Ingredients:</string>
    <string name="test_text">Test text</string>
    <string name="reload">Reload</string>
    <string name="turn_on_the_internet_connection_and_reload">Turn on the internet connection and reload</string>
    <string name="image_view">image view</string>
    <string name="favorite">Favorite</string>
    <string name="list">List</string>
    <string name="first_slide">First slide</string>
    <string name="second_slide">Second slide</string>
    <string name="third_slide">Third slide</string>
    <string name="fourth_slide">Fourth slide</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="sign_up_in_recipe_application">Sign Up in Recipe application or Sign In  if you have an account to continue</string>
    <string name="sign_up_to_continue">SIGN UP</string>
    <string name="log_in_to_continue">LOG IN</string>
    <string name="log_in">Log In</string>
    <string name="value_not_email">значение не является email</string>
    <string name="user_name_not_set">Имя пользователя не задано</string>
    <string name="min_length_password">минимальная длина пароля 8 символов</string>
    <string name="value_not_match_password">значение не соответствует паролю</string>
    <string name="or_use_social_networks">or use social networks</string>

    <string name="facebook_application_id" translatable="false">308378624662427</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb308378624662427</string>
    <string name="facebook_client_token">59ae8e35e9c8c6be7b5a99608b1630cc</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->

    <string name="sign_out">Sign Out</string>
    <string name="delete">Delete\nprofile</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="header_title">Header title</string>
    <string name="header_text">Header text</string>
    <string name="user_name">user name</string>
    <string name="user_name_not_filled">имя пользователя не заполнено</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="passwords_not_filled">Пароли не заполнены</string>
    <string name="email_not_filled">Email не заполнен</string>
    <string name="passwords_does_not_match">Пароли не совпадают</string>
    <string name="email_does_not_match">email не соответзтвует форме</string>
    <string name="password_length_eight">Длина пароля должна быть не менее 8 символов</string>
    <string name="send_something_on_email">На указанную почту было что-то отправлено</string>
    <string name="cancel_user_registration">Регистрация отменена пользователем</string>
    <string name="cancel_reset_password">Сброс пароля отменен пользователем</string>
    <string name="description_actions_at_forget_password">On your email address will send email for reset password</string>
    <string name="too_fast">Да не торопись ты так\nЖди минуту!</string>
    <string name="submit">Submit</string>
    <string name="apply">Apply</string>
    <string name="change_password">Change password</string>
    <string name="change_name">Change name</string>
    <string name="change_user_name">Change user name</string>
    <string name="enter_new_name_for_profile">Enter new name for profile</string>
    <string name="name_for_profile">Name for profile</string>
    <string name="enter_new_value">Enter new value</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="detail_recipe">Detail recipe</string>
    <string name="how_to_cook">How to cook</string>
    <string name="master_of_recipes">Master of recipes</string>
    <string name="turn_on_net_connection_and_repeat">Turn on net connection and repeat</string>
    <string name="turn_on_net_connection_and_make_search">Turn on net connection and make search</string>
    <string name="turn_on_net_connection_and_make_login">Turn on net connection and make login</string>
    <string name="retry_it">Retry</string>
    <string name="search_failed">Search failed</string>

    <!-- Filter gropes name -->
    <string name="filters">Filters</string>
    <string name="by_diets">By diets</string>
    <string name="by_health">By health</string>
    <string name="by_meal_types">By meal types</string>
    <string name="by_cuisine_types">By cuisine types</string>


</resources>